# clearos-ecap-adapter

./: .gitignore  LICENSE  Makefile.am  NOTICE  autogen.sh  clearos-ecap-adapter.conf  clearos-ecap-adapter.spec  clearos-ecap-adapter.spec.in  configure.ac  squid_ecap.conf.in
m4/: xstd_cpp_checks.ac
src/: Makefile.am  ecap-adapter.cpp  expat-xml.cpp  expat-xml.h
